# kern

./: .gitignore  CHANGELOG.md  EXAMPLES.md  README.md  TODO.md  install.sh  kern.ts  package.json  renovate.json  tsconfig.json
.github/workflows/: ci.yml  release-on-tag.yml  tag-on-main.yml
docs/: sandbox-proposal.md  sandbox-research.md
extensions/: package.json  tsconfig.json
extensions/claude-compat/: index.ts  loader.test.ts  loader.ts  skills.test.ts  skills.ts
extensions/context-manager/: index.ts  logger.test.ts  logger.ts
extensions/fetch-url/: fetcher.test.ts  fetcher.ts  index.ts
extensions/mcp-integration/: config.test.ts  config.ts  discovery.test.ts  discovery.ts  index.ts
extensions/model-router/: classifier.test.ts  classifier.ts  decision.test.ts  decision.ts  index.ts  logger.test.ts  logger.ts  override.test.ts  override.ts  rules.test.ts  rules.ts
extensions/safe-bash/: allowlist.test.ts  allowlist.ts  index.ts  rules.test.ts  rules.ts
extensions/shared/: append-jsonl.ts  model-rules.ts  permission-queue.test.ts  permission-queue.ts
extensions/task/: SMOKE.md  index.test.ts  index.ts  logger.test.ts  (+3 more)
pi-extensions/: package.json  tsconfig.json
router/: config.yaml  pyproject.toml
router/src/ai_router/: config.py  main.py  metadata.py  proxy.py
router/src/ai_router/backends/: anthropic.py  ollama.py
router/tests/: conftest.py  test_api.py  test_classifier.py  test_proxy.py
spec/: overview.md
templates/: PI.md  model-rules.json  settings.json
tests/: test_api.py  test_backends.py  test_config.py  test_metadata.py
(+34 files in other folders)
