[project]
name = "kern-router"
version = "0.1.0"
description = "Local AI prompt router with OpenAI-compatible API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "httpx[http2]>=0.27",
]

[project.scripts]
ai-router = "ai_router.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_router"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
